# website

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
assets/: aboutme.md
blogs/: test.md
src/: home.rs  main.rs  page.rs  photography.rs
src/blog/: generate.rs  mod.rs
src/util/: content.rs  mod.rs  routes.rs
style/: style.css
